Resolves: fdo#38071 improve multi-line form field text ranges

Change-Id: I40d32a34499661de562ae2160193ccf5e41d9465